# SmartThermalWatch

./: .gitignore  README.md  build.gradle  dependencies.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hq/watch/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/therm/: ClientThread.cpp  ClientThread.h  DeviceConnect.cpp  EasyTime.cpp  EasyTime.h  FileEx.cpp  FileEx.h  IR_APP_Define.h  IR_APP_Private.cpp  IR_APP_Private.h  IR_APP_SDK.cpp  IR_APP_SDK.h  KTime.cpp  KTime.h  Socket.cpp  Socket.h  Thread.cpp  Thread.h  Utility.cpp  Utility.h  compile_X32.txt  main.cpp  wifi_decode_packet.cpp  wifi_decode_packet.h  wifi_define.cpp  wifi_define.h  wifipacketinfo.cpp  wifipacketinfo.h  zs_CmdList.h  zs_CmdProcess.cpp  zs_CmdProcess.h  zs_Types.h
app/src/main/java/com/hq/watch/: MainActivity.java  MyApp.java
app/src/main/java/com/hq/watch/adapter/: DevicePopupListAdapter.java
app/src/main/java/com/hq/watch/base/: BaseActivity.java  CommonConst.java  GlobalConfig.java  GlobalConst.java
app/src/main/java/com/hq/watch/device/: ControlDeviceIJKActivity.java  DeviceCtrlIJKPresenter.java  DeviceCtrlPresenter.java  DeviceScanPresenter.java  IDeviceCtrlView.java  (+1 more)
app/src/main/res/drawable/: bg_dialog.xml  ic_back_white.xml  shape_bg_gray.xml  shape_bg_main.xml  text_btn_bg.xml
app/src/main/res/layout/: activity_bg.xml  activity_control_device_ijk.xml  activity_main.xml  dialog_common_confirm.xml  item_device_popup.xml  layout_tool_bar.xml  popupwindows_recycleview_base.xml  widget_device_item.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-sw1024dp/: dimens.xml
app/src/main/res/values-sw1280dp/: dimens.xml
app/src/main/res/values-sw1365dp/: dimens.xml
app/src/main/res/values-sw240dp/: dimens.xml
app/src/main/res/values-sw320dp/: dimens.xml
app/src/main/res/values-sw384dp/: dimens.xml
app/src/main/res/values-sw392dp/: dimens.xml
app/src/main/res/values-sw400dp/: dimens.xml
app/src/main/res/values-sw410dp/: dimens.xml
app/src/main/res/values-sw411dp/: dimens.xml
app/src/main/res/values-sw432dp/: dimens.xml
app/src/main/res/values-sw480dp/: dimens.xml
app/src/main/res/values-sw533dp/: dimens.xml
app/src/main/res/values-sw592dp/: dimens.xml
app/src/main/res/values-sw600dp/: dimens.xml
app/src/main/res/values-sw640dp/: dimens.xml
app/src/main/res/values-sw662dp/: dimens.xml
app/src/main/res/values-sw720dp/: dimens.xml
app/src/main/res/values-sw768dp/: dimens.xml
app/src/main/res/values-sw800dp/: dimens.xml
app/src/main/res/values-sw811dp/: dimens.xml
app/src/main/res/values-sw820dp/: dimens.xml
app/src/main/res/values-sw960dp/: dimens.xml
app/src/main/res/values-sw961dp/: dimens.xml
app/src/test/java/com/hq/watch/: ExampleUnitTest.java
doc/: monitor_vie_pkcs12.jks
gradle/wrapper/: gradle-wrapper.properties
ijkplayer-java/: build.gradle
(+41 files in other folders)
